route-pattern/src/snapshots/route_pattern__hand_parser__tests__it_works.snap
---
source: src/hand_parser.rs
expression: "serialize(&parse(\"/articles/<.+>/update\", '<', '>').unwrap())"
---
- "text:/articles/"
- "regex:.+"
- "text:/update"

