route-pattern/src/snapshots/route_pattern__hand_parser__tests__multiple_groups.snap
---
source: src/hand_parser.rs
expression: "serialize(&parse(\"/ar<\\\\S+>/<.+>/update\", '<', '>').unwrap())"
---
- "text:/ar"
- "regex:\\S+"
- "text:/"
- "regex:.+"
- "text:/update"

