route-pattern/src/snapshots/route_pattern__hand_parser__tests__nested_pattern_first_level_only.snap
---
source: src/hand_parser.rs
expression: "serialize(&parse(\"/articles/<a<.+>b>/update\", '<', '>').unwrap())"
---
- "text:/articles/"
- "regex:a<.+>b"
- "text:/update"

