route-pattern/src/snapshots/route_pattern__hand_parser__tests__no_regex.snap
---
source: src/hand_parser.rs
expression: "serialize(&parse(\"abc\", '<', '>').unwrap())"
---
- "text:abc"

