route-pattern/src/snapshots/route_pattern__hand_parser__tests__no_string.snap
---
source: src/hand_parser.rs
expression: "serialize(&parse(\"<abc.+>\", '<', '>').unwrap())"
---
- "regex:abc.+"

